Wording improvement: Module Status -> Notebook Status; no functional change

--- a/Tutorial-ADM_Initial_Data-ShiftedKerrSchild.ipynb
+++ b/Tutorial-ADM_Initial_Data-ShiftedKerrSchild.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "## This module sets up Shifted Kerr-Schild initial data [Etienne et al., 2017 GiRaFFE](https://arxiv.org/pdf/1704.00599.pdf).\n",
     "\n",
-    "**Module Status:** <font color='green'><b> Validated </b></font>\n",
+    "**Notebook Status:** <font color='green'><b> Validated </b></font>\n",
     "\n",
     "**Validation Notes:** This module has been validated to exhibit convergence to zero of the Hamiltonian and momentum constraint violations at the expected order to the exact solution (see plots at bottom of [the exact initial data validation start-to-finish tutorial notebook](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_Exact_Initial_Data.ipynb)).\n",
     "\n",
