--- a/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
+++ b/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "This notebook documents the function from the original `GiRaFFE` that calculates the flux for $\\tilde{S}_i$ according to the method of Harten, Lax, von Leer, and Einfeldt (HLLE), assuming that we have calculated the values of the velocity and magnetic field on the cell faces according to the piecewise-parabolic method (PPM) of [Colella and Woodward (1984)](https://crd.lbl.gov/assets/pubs_presos/AMCS/ANAG/A141984.pdf), modified for the case of GRFFE. \n",
     "\n",
-    "**Module Status:** <font color=green><b> Validated against the original `GiRaFFE` </b></font>\n",
+    "**Notebook Status:** <font color=green><b> Validated against the original `GiRaFFE` </b></font>\n",
     "\n",
     "**Validation Notes:** Everything should be written at this point, but we need to finish the rest of the algorithm before we can validate this.\n",
     "\n",
