--- a/Tutorial-ADMBSSN_tofrom_4metric.ipynb
+++ b/Tutorial-ADMBSSN_tofrom_4metric.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "### We will often find it useful to convert between the 4-metric $g_{\\mu\\nu}$ and the ADM or BSSN variables. This notebook documents the NRPy+ Python module [`BSSN.ADMBSSN_tofrom_4metric`](../edit/BSSN/ADMBSSN_tofrom_4metric.py), which provides that functionality.\n",
     "\n",
-    "**Module Status:** <font color='orange'><b> Self-validated, some additional tests performed </b></font>\n",
+    "**Notebook Status:** <font color='orange'><b> Self-validated, some additional tests performed </b></font>\n",
     "\n",
     "**Validation Notes:** This tutorial notebook has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). In addition, the construction of $g_{\\mu\\nu}$ and $g^{\\mu\\nu}$ from BSSN variables has passed the test $g^{\\mu\\nu}g_{\\mu\\nu}=4$ [below](#validationcontraction). **Additional validation tests may have been performed, but are as yet, undocumented. (TODO)**\n",
     "\n",
