--- a/Tutorial-ETK_thorn-IDMaxwellNRPy.ipynb
+++ b/Tutorial-ETK_thorn-IDMaxwellNRPy.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "[comment]: <> (Abstract: TODO)\n",
     "\n",
-    "[comment]: <> (Module Status and Validation Notes: TODO)\n",
+    "[comment]: <> (Notebook Status and Validation Notes: TODO)\n",
     "\n",
     "### NRPy+ Source Code for this module: [Maxwell/MaxwellCartesian_ID.py](../edit/Maxwell/MaxwellCartesian_ID.py) [\\[tutorial\\]](Tutorial-MaxwellCartesian.ipynb) Constructs these Maxwell initial data as SymPy expressions.\n",
     "\n",
