--- a/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Arbitrary_Grids_multi_order.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "## This module is designed to interpolate arbitrary quantities on [Einstein Toolkit](https://einsteintoolkit.org/) Adaptive-Mesh Refinement (AMR) grids (using the [Carpet](https://carpetcode.org/) AMR infrastructure) to numerical grids with arbitrary sampling.\n",
     "\n",
-    "**Module Status:** <font color='red'><b> In progress</b></font>\n",
+    "**Notebook Status:** <font color='red'><b> In progress</b></font>\n",
     "\n",
     "**Validation Notes:** This module is currently undergoing validation testing.\n",
     "\n",
