--- a/Tutorial-ETK_thorn-MaxwellEvol.ipynb
+++ b/Tutorial-ETK_thorn-MaxwellEvol.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "[comment]: <> (Abstract: TODO)\n",
     "\n",
-    "[comment]: <> (Module Status and Validation Notes: TODO)\n",
+    "[comment]: <> (Notebook Status and Validation Notes: TODO)\n",
     "\n",
     "### NRPy+ Source Code for this module: [Maxwell/MaxwellCartesian_Evol.py](../edit/Maxwell/MaxwellCartesian_Evol.py) [\\[tutorial\\]](Tutorial-MaxwellCartesian.ipynb) Constructs Maxwell's equations and initial data as SymPy expressions\n",
     "\n",
