--- a/Tutorial-ETK_thorn-WaveToyNRPy.ipynb
+++ b/Tutorial-ETK_thorn-WaveToyNRPy.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "[comment]: <> (Abstract: TODO)\n",
     "\n",
-    "[comment]: <> (Module Status and Validation Notes: TODO)\n",
+    "[comment]: <> (Notebook Status and Validation Notes: TODO)\n",
     "\n",
     "### NRPy+ Source Code for this module: \n",
     "* [ScalarWave/ScalarWave_RHSs.py](../edit/ScalarWave/ScalarWave_RHSs.py) [\\[**tutorial**\\]](Tutorial-ScalarWave.ipynb) \n",
