--- a/Tutorial-FishboneMoncriefID.ipynb
+++ b/Tutorial-FishboneMoncriefID.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "[comment]: <> (Abstract: TODO)\n",
     "\n",
-    "[comment]: <> (Module Status and Validation Notes: TODO)\n",
+    "[comment]: <> (Notebook Status and Validation Notes: TODO)\n",
     "\n",
     "### NRPy+ Source Code for this module: [FishboneMoncriefID/FishboneMoncriefID.py](../edit/FishboneMoncriefID/FishboneMoncriefID.py)\n",
     "\n",
