--- a/Tutorial-GiRaFFE_HO_C_code_library-A2B.ipynb
+++ b/Tutorial-GiRaFFE_HO_C_code_library-A2B.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "<a id='intro'></a>\n",
     "\n",
-    "**Module Status:** <font color=orange><b> Self-Validated </b></font>\n",
+    "**Notebook Status:** <font color=orange><b> Self-Validated </b></font>\n",
     "\n",
     "**Validation Notes:** This code produces the expected magnetic fields for Exact Wald, Aligned Rotator, and Alfv&eacute;n Wave initial data.\n",
     "\n",
