--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "[comment]: <> (Abstract: TODO)\n",
     "\n",
-    "**Module Status:** <font color='red'><b> In progress </b></font>\n",
+    "**Notebook Status:** <font color='red'><b> In progress </b></font>\n",
     "\n",
     "**Validation Notes:** This module is under active development -- do ***not*** use the resulting C code output for doing science.\n",
     "\n",
