--- a/Tutorial-GiRaFFEfood_HO_1D_tests.ipynb
+++ b/Tutorial-GiRaFFEfood_HO_1D_tests.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "## This module provides another initial data option for `GiRaFFE`, drawn from [this paper](https://arxiv.org/abs/1310.3274) .\n",
     "\n",
-    "**Module Status:** <font color='orange'><b> Self-Validated </b></font>\n",
+    "**Notebook Status:** <font color='orange'><b> Self-Validated </b></font>\n",
     "\n",
     "**Validation Notes:** This tutorial notebook has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). **Additional validation tests may have been performed, but are as yet, undocumented. (TODO)**\n",
     "\n",
