--- a/Tutorial-GiRaFFEfood_HO_Exact_Wald.ipynb
+++ b/Tutorial-GiRaFFEfood_HO_Exact_Wald.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "### NRPy+ Source Code for this module: [GiRaFFEfood_HO/GiRaFFEfood_HO_Exact_Wald.py](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO_Exact_Wald.py)\n",
     "\n",
-    "**Module Status:** <font color='orange'><b> Self-Validated </b></font>\n",
+    "**Notebook Status:** <font color='orange'><b> Self-Validated </b></font>\n",
     "\n",
     "**Validation Notes:** This tutorial notebook has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation1). **Additional validation tests may have been performed, but are as yet, undocumented. (TODO)**\n",
     "\n",
