--- a/Tutorial-SEOBNR_Factorized_Modes.ipynb
+++ b/Tutorial-SEOBNR_Factorized_Modes.ipynb
@@ -20,7 +20,7 @@
     "## This module documents the reduced spinning effective one-body factorized modes as numerically implemented in LALSuite's SEOBNRv3 gravitational waveform approximant.  That is, we follow the appendix of of [Taracchini, et. al. (2012)](https://arxiv.org/abs/1202.0790).\n",
     "\n",
     "\n",
-    "**Module Status:** <font color='red'><b> In progress </b></font>\n",
+    "**Notebook Status:** <font color='red'><b> In progress </b></font>\n",
     "\n",
     "**Validation Notes:** This module is under active development -- do ***not*** use the resulting code for scientific applications.  In the future, this module will be validated against the LALSuite [SEOBNRv3/SEOBNRv3_opt code]( https://git.ligo.org/lscsoft/lalsuite.) that was reviewed and approved for LIGO parameter estimation by the LIGO Scientific Collaboration.\n",
     "\n",
