--- a/Tutorial-SpinWeighted_Spherical_Harmonics.ipynb
+++ b/Tutorial-SpinWeighted_Spherical_Harmonics.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "[comment]: <> (Abstract: TODO)\n",
     "\n",
-    "**Module Status:** <font color='green'><b> Validated </b></font>\n",
+    "**Notebook Status:** <font color='green'><b> Validated </b></font>\n",
     "\n",
     "**Validation Notes:** This tutorial notebook has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). In addition, its results have been validated against a [trusted Mathematica notebook](https://demonstrations.wolfram.com/versions/source.jsp?id=SpinWeightedSphericalHarmonics&version=0012).\n",
     "\n",
