--- a/Tutorial-Start_to_Finish-ScalarWave.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWave.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "## This module solves the scalar wave equation for a plane wave in Cartesian coordinates, using the [Method of Lines](Tutorial-Method_of_Lines-C_Code_Generation.ipynb).\n",
     "\n",
-    "**Module Status:** <font color='green'><b>Validated</b></font>\n",
+    "**Notebook Status:** <font color='green'><b>Validated</b></font>\n",
     "\n",
     "**Validation Notes:** This module has been validated to converge at the expected order to the exact solution (see [plot](#convergence) at bottom).\n",
     "\n",
