--- a/Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb
+++ b/Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -80,14 +80,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1256, 1256, 1256, 1256, 1256, 1256)\n",
+      "1256 1256 1256 1256 1256 1256\n",
       "Just generated a TOV star with \n",
       "* M        = 1.405031497682765e-01 ,\n",
       "* R_Schw   = 9.566039886703138e-01 , \n",
       "* R_iso    = 8.100079558158075e-01 , \n",
       "* M/R_Schw = 1.468770268913230e-01 \n",
       "\n",
-      "Single Polytrope TOV solution generated in: 1.15832495689 s\n",
+      "Single Polytrope TOV solution generated in: 0.16563940048217773 s\n",
       "Initial data file: outputTOVpolytrope.txt\n"
      ]
     }
@@ -131,9 +131,9 @@
     "# | TOV/Piecewise_Polytrope__dict.py NRPy+ file |\n",
     "# .---------------------------------------------.\n",
     "# vvvvvvvvvvvvvvvv\n",
-    "# EOSname = \"Single\"\n",
+    "EOSname = \"Single\"\n",
     "# EOSname = \"SLy\"\n",
-    "EOSname = \"APR4\"\n",
+    "# EOSname = \"APR4\"\n",
     "# ^^^^^^^^^^^^^^^^\n",
     "\n",
     "# Import our TOV solver, which supports both single\n",
@@ -985,7 +985,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ETK_thorn-NRPyPlusTOVID.ipynb to latex\n",
-      "[NbConvertApp] Writing 94696 bytes to Tutorial-ETK_thorn-NRPyPlusTOVID.tex\n",
+      "[NbConvertApp] Writing 102669 bytes to Tutorial-ETK_thorn-NRPyPlusTOVID.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -1009,21 +1009,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
