GiRaFFE_Ccode_library: Update to avoid whitespace differences in Python 3.

--- a/Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.ipynb
+++ b/Tutorial-GiRaFFE_HO_C_code_library-C2P_P2C.ipynb
@@ -707,23 +707,9 @@
      "text": [
       "Printing difference between original C code and this code...\n",
       "Checking file driver_conserv_to_prims_FFE.C\n",
-      "--- GiRaFFE_HO/GiRaFFE_Ccode_library/driver_conserv_to_prims_FFE.C\n",
-      "+++ GiRaFFE_HO/GiRaFFE_Ccode_validation/driver_conserv_to_prims_FFE.C\n",
-      "@@ -252,4 +252,4 @@\n",
-      "           in_gfs[IDX4pt(STILDED2GF, index)] = StildeD2L;\n",
-      "         }\n",
-      "       }\n",
-      "-}+}\n",
-      "ERROR: Disagreement found with .py file. See differences above.\n",
+      "No difference. TEST PASSED!\n",
       "Checking file compute_conservatives_FFE.C\n",
-      "--- GiRaFFE_HO/GiRaFFE_Ccode_library/compute_conservatives_FFE.C\n",
-      "+++ GiRaFFE_HO/GiRaFFE_Ccode_validation/compute_conservatives_FFE.C\n",
-      "@@ -34,4 +34,4 @@\n",
-      "   *StildeD0L = v_xL * sqrtg * B2 * fourpi_inv;\n",
-      "   *StildeD1L = v_yL * sqrtg * B2 * fourpi_inv;\n",
-      "   *StildeD2L = v_zL * sqrtg * B2 * fourpi_inv;\n",
-      "-}+}\n",
-      "ERROR: Disagreement found with .py file. See differences above.\n"
+      "No difference. TEST PASSED!\n"
      ]
     }
    ],
