GiRaFFE/Stilde_flux: Update to use new npryAbs. Fixed missing line in compute_u0_noif() that was causing disagreement.

--- a/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
+++ b/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
@@ -274,7 +274,8 @@
     "    # Now, we set Rmax = min(Rmax,R):\n",
     "    # If Rmax>R, then Rmax = 0.5*(Rmax+R-Rmax+R) = R\n",
     "    # If R>Rmax, then Rmax = 0.5*(Rmax+R+Rmax-R) = Rmax\n",
-    "    # If R==TINYDOUBLE, then Rmax = 0.5*(Rmax-Rmax) = 0, since, e.g., 10 +/- 1e-100 = 10 exactly in double precision    Rmax =  sp.Rational(1,2)*(Rmax+R-sp.Abs(Rmax-R))\n",
+    "    # If R==TINYDOUBLE, then Rmax = 0.5*(Rmax-Rmax) = 0, since, e.g., 10 +/- 1e-100 = 10 exactly in double precision    Rmax =  sp.Rational(1,2)*(Rmax+R-nrpyAbs(Rmax-R))\n",
+    "    Rmax =  sp.Rational(1,2)*(Rmax+R-nrpyAbs(Rmax-R))\n",
     "\n",
     "    # With our rescaled Rmax, v^i = sqrt{Rmax/R} v^i\n",
     "    rescaledValenciavU = ixp.zerorank1()\n",
@@ -430,7 +431,7 @@
     "c &= (u^0)^2 (v^i)^2 (1-v_0^2) - v_0^2 \\left(g^{ii} - (\\beta^i)^2/\\alpha^2\\right) \\\\\n",
     "&= g^{ii} - (\\beta^i)^2/\\alpha^2,\n",
     "\\end{align}\n",
-    "are simplifications that should save us some time; we can see that $a \\geq 0$ is guaranteed. Note that we also force `detm` to be positive. Thus, `detm/a` is guaranteed to be positive itself, rendering the calls to `sp.Abs()` superfluous. Furthermore, we eliminate any dependence on the Valencia 3-velocity and the time compoenent of the four-velocity, $u^0$. This leaves us free to solve the quadratic in the familiar way: $$c_\\pm = \\frac{-b \\pm \\sqrt{b^2-4ac}}{2a}$$."
+    "are simplifications that should save us some time; we can see that $a \\geq 0$ is guaranteed. Note that we also force `detm` to be positive. Thus, `detm/a` is guaranteed to be positive itself, rendering the calls to `nrpyAbs()` superfluous. Furthermore, we eliminate any dependence on the Valencia 3-velocity and the time compoenent of the four-velocity, $u^0$. This leaves us free to solve the quadratic in the familiar way: $$c_\\pm = \\frac{-b \\pm \\sqrt{b^2-4ac}}{2a}$$."
    ]
   },
   {
@@ -456,7 +457,7 @@
     "    # Now, we are free to solve the quadratic equation as usual. We take care to avoid passing a\n",
     "    # negative value to the sqrt function.\n",
     "    detm = b*b - 4*a*c\n",
-    "    detm = sp.sqrt(sp.Rational(1,2)*(detm + sp.Abs(detm)))\n",
+    "    detm = sp.sqrt(sp.Rational(1,2)*(detm + nrpyAbs(detm)))\n",
     "    cplus  = sp.Rational(1,2)*(-b/a + detm/a)\n",
     "    cminus = sp.Rational(1,2)*(-b/a - detm/a)\n",
     "    return cplus,cminus\n"
@@ -487,12 +488,12 @@
     "    # The following algorithms have been verified with random floats:\n",
     "    \n",
     "    # Now, we need to set cmax to the larger of cpr,cpl, and 0\n",
-    "    cmax = sp.Rational(1,2)*(cpr+cpl+sp.Abs(cpr-cpl))\n",
-    "    cmax = sp.Rational(1,2)*(cmax+sp.Abs(cmax))\n",
+    "    cmax = sp.Rational(1,2)*(cpr+cpl+nrpyAbs(cpr-cpl))\n",
+    "    cmax = sp.Rational(1,2)*(cmax+nrpyAbs(cmax))\n",
     "    \n",
     "    # And then, set cmin to the smaller of cmr,cml, and 0\n",
-    "    cmin =  sp.Rational(1,2)*(cmr+cml-sp.Abs(cmr-cml))\n",
-    "    cmin = -sp.Rational(1,2)*(cmin-sp.Abs(cmin))\n",
+    "    cmin =  sp.Rational(1,2)*(cmr+cml-nrpyAbs(cmr-cml))\n",
+    "    cmin = -sp.Rational(1,2)*(cmin-nrpyAbs(cmin))\n",
     "    return cmax,cmin\n"
    ]
   },
@@ -653,7 +654,15 @@
     "    stflux.calculate_Stilde_flux(i,False)\n",
     "    for j in range(DIM):\n",
     "        print(\"Stilde_fluxD[\"+str(j)+\"] - stflux.Stilde_fluxD[\"+str(j)+\"] = \"\\\n",
-    "              + str(Stilde_fluxD[j] - stflux.Stilde_fluxD[j]))"
+    "              + str(Stilde_fluxD[j] - stflux.Stilde_fluxD[j]))\n",
+    "\n",
+    "# Stilde_fluxD = calculate_Stilde_flux(i,Stilde_fluxD)\n",
+    "# print(\"u4upperZero_r - stflux.u4upperZero_r = \"\\\n",
+    "#               + str(u4upperZero_r - stflux.u4upperZero_r))\n",
+    "\n",
+    "# for j in range(DIM):\n",
+    "#     print(\"Valenciav_rU[\"+str(j)+\"] - stflux.Valenciav_rU[\"+str(j)+\"] = \"\\\n",
+    "#           + str(Valenciav_rU[j] - stflux.Valenciav_rU[j]))"
    ]
   },
   {
@@ -719,7 +728,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb to latex\n",
-      "[NbConvertApp] Writing 76139 bytes to Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.tex\n",
+      "[NbConvertApp] Writing 19720600 bytes to Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -743,21 +752,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
