--- a/Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb
+++ b/Tutorial-ETK_thorn-Weyl_Scalars_and_Spacetime_Invariants.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "# Weyl Scalars and Invariants: An Introduction to Einstein Toolkit Diagnostic Thorns\n",
     "\n",
-    "## Author: Zach Etienne\n",
+    "## Author: Patrick Nelson & Zach Etienne\n",
     "### Formatting improvements courtesy Brandon Clark\n",
     "\n",
     "[comment]: <> (Abstract: TODO)\n",
@@ -545,7 +545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
