--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb
@@ -815,8 +815,7 @@
     "    print(\"Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\")\n",
     "\n",
     "    # Set up the C function for the det(gammahat) = det(gammabar)\n",
-    "    EGC.output_Enforce_Detgammabar_Constraint_Ccode(Ccodesdir,version=\"new\",\n",
-    "                                                    exprs=enforce_detg_constraint_symb_expressions)\n",
+    "    EGC.output_Enforce_Detgammabar_Constraint_Ccode(Ccodesdir,exprs=enforce_detg_constraint_symb_expressions)\n",
     "    end = time.time()\n",
     "    print(\"Finished gamma constraint C codegen in \" + str(end - start) + \" seconds.\")"
    ]
