GiRaFFEfood: Remove superfluous dependence on loop.py, add comments to imports.

--- a/Tutorial-GiRaFFEfood_HO_1D_tests.ipynb
+++ b/Tutorial-GiRaFFEfood_HO_1D_tests.ipynb
@@ -102,12 +102,11 @@
    "outputs": [],
    "source": [
     "# Step 0: Import the NRPy+ core modules and set the reference metric to Cartesian\n",
-    "import NRPy_param_funcs as par\n",
-    "import indexedexp as ixp\n",
-    "import grid as gri\n",
-    "import finite_difference as fin\n",
-    "from outputC import *\n",
-    "import loop\n",
+    "from outputC import *            # NRPy+: Core C code output module\n",
+    "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
+    "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
+    "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
+    "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "\n",
     "import reference_metric as rfm\n",
     "par.set_parval_from_str(\"reference_metric::CoordSystem\",\"Cartesian\")\n",
@@ -563,21 +562,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
