--- a/Tutorial-Start_to_Finish-GiRaFFE_HO-1D_tests.ipynb
+++ b/Tutorial-Start_to_Finish-GiRaFFE_HO-1D_tests.ipynb
@@ -91,13 +91,12 @@
    "outputs": [],
    "source": [
     "# Step P1: First we import needed core NRPy+ modules\n",
-    "from outputC import *\n",
-    "import NRPy_param_funcs as par\n",
-    "import grid as gri\n",
-    "import loop as lp\n",
-    "import indexedexp as ixp\n",
-    "import finite_difference as fin\n",
-    "import reference_metric as rfm\n",
+    "from outputC import *            # NRPy+: Core C code output module\n",
+    "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
+    "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
+    "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
+    "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "import reference_metric as rfm   # NRPy+: Reference metric support\n",
     "\n",
     "#Step P2: Create C code output directory:\n",
     "import cmdline_helper as cmd\n",
@@ -308,11 +307,6 @@
     "GiRaFFEfood_A_v_CKernel_left   = fin.FD_outputC(\"returnstring\",GiRaFFEfood_A_v_to_print_left,   params=\"outCverbose=False\")\n",
     "GiRaFFEfood_A_v_CKernel_center = fin.FD_outputC(\"returnstring\",GiRaFFEfood_A_v_to_print_center, params=\"outCverbose=False\")\n",
     "GiRaFFEfood_A_v_CKernel_right  = fin.FD_outputC(\"returnstring\",GiRaFFEfood_A_v_to_print_right,  params=\"outCverbose=False\")\n",
-    "\n",
-    "# Format the code within a C loop over cctkGH\n",
-    "#GiRaFFEfood_A_v_looped = loop.loop([\"i2\",\"i1\",\"i0\"],[\"0\",\"0\",\"0\"],[\"cctk_lsh[2]\",\"cctk_lsh[1]\",\"cctk_lsh[0]\"],\\\n",
-    "#                                   [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",\\\n",
-    "#                                   GiRaFFEfood_A_v_CKernel.replace(\"time\",\"cctk_time\"))\n",
     "\n",
     "# Step 4: Write the C code kernel to file.\n",
     "with open(os.path.join(outdir,\"GiRaFFEfood_A_v_1D_tests_left.h\"), \"w\") as file:\n",
@@ -1612,21 +1606,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
