--- a/Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.ipynb
+++ b/Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.ipynb
@@ -90,13 +90,12 @@
    ],
    "source": [
     "# First we import needed core NRPy+ modules\n",
-    "from outputC import *\n",
-    "import NRPy_param_funcs as par\n",
-    "import grid as gri\n",
-    "import loop as lp\n",
-    "import indexedexp as ixp\n",
-    "import finite_difference as fin\n",
-    "import reference_metric as rfm\n",
+    "from outputC import *            # NRPy+: Core C code output module\n",
+    "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
+    "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
+    "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
+    "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "import reference_metric as rfm   # NRPy+: Reference metric support\n",
     "\n",
     "# Set the finite differencing order to 4.\n",
     "par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", 2)\n",
@@ -171,11 +170,6 @@
     "                            ]\n",
     "\n",
     "GiRaFFEfood_A_v_CKernel = fin.FD_outputC(\"returnstring\",GiRaFFEfood_A_v_to_print,params=\"outCverbose=False\")\n",
-    "\n",
-    "# Format the code within a C loop over cctkGH\n",
-    "#GiRaFFEfood_A_v_looped = loop.loop([\"i2\",\"i1\",\"i0\"],[\"0\",\"0\",\"0\"],[\"cctk_lsh[2]\",\"cctk_lsh[1]\",\"cctk_lsh[0]\"],\\\n",
-    "#                                   [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",\\\n",
-    "#                                   GiRaFFEfood_A_v_CKernel.replace(\"time\",\"cctk_time\"))\n",
     "\n",
     "# Step 4: Write the C code kernel to file.\n",
     "with open(\"GiRaFFE_standalone/GiRaFFEfood_A_v_AlignedRotator.h\", \"w\") as file:\n",
@@ -1585,21 +1579,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
