GiRaFFE: Incorporating the new loop/function generation infrastructure.

--- a/Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.ipynb
+++ b/Tutorial-Start_to_Finish-GiRaFFE_HO-Aligned_Rotator.ipynb
@@ -304,38 +304,51 @@
     "print(\"Generating C code for GiRaFFE RHSs in \"+par.parval_from_str(\"reference_metric::CoordSystem\")+\" coordinates.\")\n",
     "start = time.time()\n",
     "\n",
-    "Prereqs_CKernel = fin.FD_outputC(\"returnstring\",Prereqs_to_print,params=\"outCverbose=False\")\n",
-    "#Prereqs_CKernel = \"const double u0 = u0GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\\n\" + Prereqs_CKernel\n",
-    "metric_quantities_CKernel = fin.FD_outputC(\"returnstring\",metric_quantities_to_print,params=\"outCverbose=False\")\n",
-    "Conservs_CKernel = fin.FD_outputC(\"returnstring\",Conservs_to_print,params=\"outCverbose=False\")\n",
-    "#Conservs_CKernel = \"const double u0 = u0GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\\n\" + Conservs_CKernel\n",
+    "desc=\"Evaluate quantities to FD for RHSs\"\n",
+    "name=\"quantities_to_FD_for_rhs_eval\"\n",
     "\n",
-    "Prereqs_looped = lp.loop([\"i2\",\"i1\",\"i0\"],[\"0\",\"0\",\"0\"],\\\n",
-    "                           [\"Nxx_plus_2NGHOSTS[2]\",\"Nxx_plus_2NGHOSTS[1]\",\"Nxx_plus_2NGHOSTS[0]\"],\\\n",
-    "                           [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",\\\n",
-    "                           Prereqs_CKernel.replace(\"time\",\"cctk_time\"))\n",
+    "outCfunction(\n",
+    "    outfile  = os.path.join(outdir,\"Prereqs.h\"), desc=desc, name=name,\n",
+    "    params   = \"\"\"const int Nxx_plus_2NGHOSTS[3],const REAL dxx[3], REAL *xx[3],\n",
+    "                  const REAL *in_gfs, REAL *aux_gfs\"\"\",\n",
+    "    body     = fin.FD_outputC(\"returnstring\",Prereqs_to_print,params=\"outCverbose=False\"),\n",
+    "    loopopts = \"AllPoints,Enable_rfm_precompute\")\n",
     "\n",
-    "metric_quantities_looped = lp.loop([\"i2\",\"i1\",\"i0\"],[\"0\",\"0\",\"0\"],\\\n",
-    "                                     [\"Nxx_plus_2NGHOSTS[2]\",\"Nxx_plus_2NGHOSTS[1]\",\"Nxx_plus_2NGHOSTS[0]\"],\\\n",
-    "                                     [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",\\\n",
-    "                                     metric_quantities_CKernel.replace(\"time\",\"cctk_time\"))\n",
+    "desc=\"Calculate the metric determinant and inverse\"\n",
+    "name=\"update_metric_det_inverse\"\n",
     "\n",
-    "Conservs_looped = lp.loop([\"i2\",\"i1\",\"i0\"],[\"NGHOSTS\",\"NGHOSTS\",\"NGHOSTS\"],\\\n",
-    "                            [\"Nxx[2]+NGHOSTS\",\"Nxx[1]+NGHOSTS\",\"Nxx[0]+NGHOSTS\"],\\\n",
-    "                            [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",\\\n",
-    "                            Conservs_CKernel.replace(\"time\",\"cctk_time\"))\n",
+    "outCfunction(\n",
+    "    outfile  = os.path.join(outdir,\"metric_quantities.h\"), desc=desc, name=name,\n",
+    "    params   = \"\"\"const int Nxx_plus_2NGHOSTS[3],const REAL dxx[3],REAL *xx[3],REAL *aux_gfs\"\"\",\n",
+    "    body     = fin.FD_outputC(\"returnstring\",metric_quantities_to_print,params=\"outCverbose=False\"),\n",
+    "    loopopts = \"AllPoints,Enable_rfm_precompute\")\n",
+    "\n",
+    "desc=\"Evaluate the RHSs\"\n",
+    "name=\"rhs_eval\"\n",
+    "\n",
+    "outCfunction(\n",
+    "    outfile  = os.path.join(outdir,\"Conservs.h\"), desc=desc, name=name,\n",
+    "    params   = \"\"\"rfm_struct *restrict rfmstruct,const paramstruct *restrict params,\n",
+    "                  REAL *restrict in_gfs, REAL *restrict aux_gfs\"\"\",\n",
+    "    preloop  = \"\"\"REAL invdx0 = 1.0/dxx[0];\n",
+    "                  REAL invdx1 = 1.0/dxx[1];\n",
+    "                  REAL invdx2 = 1.0/dxx[2];\"\"\"\n",
+    "    body     = fin.FD_outputC(\"returnstring\",Conservs_to_print,params=\"outCverbose=False\"),\n",
+    "    loopopts = \"InteriorPoints,Enable_rfm_precompute\",\n",
+    "    postloop = \"\"\"LOOP_REGION(0,Nxx_plus_2NGHOSTS[0],0,Nxx_plus_2NGHOSTS[1],0,Nxx_plus_2NGHOSTS[2]){\n",
+    "                      if (sqrt(sq_radial_coord(xx[0][i0],xx[1][i1],xx[2][i2])) < min_radius_inside_of_which_conserv_to_prims_FFE_and_FFE_evolution_is_DISABLED){\n",
+    "                          idx = IDX3(i0,i1,i2);\n",
+    "                          rhs_gfs[IDX4pt(STILDED0GF, idx)] = 0.0;\n",
+    "                          rhs_gfs[IDX4pt(STILDED1GF, idx)] = 0.0;\n",
+    "                          rhs_gfs[IDX4pt(STILDED2GF, idx)] = 0.0;\n",
+    "                          rhs_gfs[IDX4pt(AD0GF, idx)] = 0.0;\n",
+    "                          rhs_gfs[IDX4pt(AD1GF, idx)] = 0.0;\n",
+    "                          rhs_gfs[IDX4pt(AD2GF, idx)] = 0.0;\n",
+    "                          rhs_gfs[IDX4pt(PSI6PHIGF, idx)] = 0.0;\n",
+    "                      }\n",
+    "                  }\"\"\")\n",
     "\n",
     "end = time.time()\n",
-    "\n",
-    "# Write the C code kernel to file.\n",
-    "with open(\"GiRaFFE_standalone/Prereqs.h\", \"w\") as file:\n",
-    "    file.write(str(Prereqs_looped))\n",
-    "\n",
-    "with open(\"GiRaFFE_standalone/metric_quantities.h\", \"w\") as file:\n",
-    "    file.write(str(metric_quantities_looped))\n",
-    "\n",
-    "with open(\"GiRaFFE_standalone/Conservs.h\", \"w\") as file:\n",
-    "    file.write(str(Conservs_looped))\n",
     "\n",
     "# Step 5: Import the function to calculate u0 and write it to a file.\n",
     "import u0_smallb_Poynting__Cartesian.u0_smallb_Poynting__Cartesian as u0etc\n",
@@ -746,33 +759,13 @@
     "\n",
     "// Step P11b: Set the quantities to be differentiated by finite difference for the RHSs--ALWAYS run immediately \n",
     "//            before rhs_eval()\n",
-    "void quantities_to_FD_for_rhs_eval(const int Nxx_plus_2NGHOSTS[3],const REAL dxx[3], REAL *xx[3],\n",
-    "                                   const REAL *in_gfs, REAL *aux_gfs) {\n",
     "#include \"Prereqs.h\"\n",
-    "}\n",
+    "\n",
+    "// While this code is generally cartesian, we will need an r coordinate for the evolution:\n",
+    "REAL sq_radial_coord(const REAL x,const REAL y,const REAL z) { return x*x+y*y+z*z; }\n",
     "\n",
     "// Step P11c: Set the RHSs themselves.\n",
-    "void rhs_eval(const int Nxx[3],const int Nxx_plus_2NGHOSTS[3],const REAL dxx[3], REAL *xx[3],\n",
-    "              const REAL *in_gfs,const REAL *aux_gfs,REAL *rhs_gfs) {\n",
-    "    REAL invdx0 = 1.0/dxx[0];\n",
-    "    REAL invdx1 = 1.0/dxx[1];\n",
-    "    REAL invdx2 = 1.0/dxx[2];\n",
     "#include \"Conservs.h\"\n",
-    "    int idx;\n",
-    "    LOOP_REGION(0,Nxx_plus_2NGHOSTS[0],0,Nxx_plus_2NGHOSTS[1],0,Nxx_plus_2NGHOSTS[2]){\n",
-    "        REAL minrad2 = min_radius_inside_of_which_conserv_to_prims_FFE_and_FFE_evolution_is_DISABLED*min_radius_inside_of_which_conserv_to_prims_FFE_and_FFE_evolution_is_DISABLED;\n",
-    "        if (sq_radial_coord(xx[0][i0],xx[1][i1],xx[2][i2]) < minrad2){\n",
-    "            idx = IDX3(i0,i1,i2);\n",
-    "            rhs_gfs[IDX4pt(STILDED0GF, idx)] = 0.0;\n",
-    "            rhs_gfs[IDX4pt(STILDED1GF, idx)] = 0.0;\n",
-    "            rhs_gfs[IDX4pt(STILDED2GF, idx)] = 0.0;\n",
-    "            rhs_gfs[IDX4pt(AD0GF, idx)] = 0.0;\n",
-    "            rhs_gfs[IDX4pt(AD1GF, idx)] = 0.0;\n",
-    "            rhs_gfs[IDX4pt(AD2GF, idx)] = 0.0;\n",
-    "            rhs_gfs[IDX4pt(PSI6PHIGF, idx)] = 0.0;\n",
-    "        }\n",
-    "    }\n",
-    "}\n",
     "\n",
     "// main() function:\n",
     "// Step 0: Read command-line input, set up grid structure, allocate memory for gridfunctions, set up coordinates\n",
