--- a/Tutorial-BSSN_quantities.ipynb
+++ b/Tutorial-BSSN_quantities.ipynb
@@ -93,6 +93,7 @@
     "import indexedexp as ixp\n",
     "import grid as gri\n",
     "import reference_metric as rfm\n",
+    "import sys\n",
     "\n",
     "# Step 1.a: Set the coordinate system for the numerical grid\n",
     "par.set_parval_from_str(\"reference_metric::CoordSystem\",\"Spherical\")\n",
@@ -463,7 +464,7 @@
     "\n",
     "if par.parval_from_str(thismodule+\"::detgbarOverdetghat_equals_one\") == \"False\":\n",
     "    print(\"Error: detgbarOverdetghat_equals_one=\\\"False\\\" is not fully implemented yet.\")\n",
-    "    exit(1)\n",
+    "    sys.exit(1)\n",
     "## Approach for implementing detgbarOverdetghat_equals_one=False:\n",
     "#     detgbarOverdetghat = gri.register_gridfunctions(\"AUX\", [\"detgbarOverdetghat\"])\n",
     "#     detgbarOverdetghatInitial = gri.register_gridfunctions(\"AUX\", [\"detgbarOverdetghatInitial\"])\n",
@@ -1105,7 +1106,7 @@
     "cf_choice = par.parval_from_str(thismodule+\"::EvolvedConformalFactor_cf\")\n",
     "if not (cf_choice == \"phi\" or cf_choice == \"W\" or cf_choice == \"chi\"):\n",
     "    print(\"Error: EvolvedConformalFactor_cf == \"+par.parval_from_str(thismodule+\"::EvolvedConformalFactor_cf\")+\" unsupported!\")\n",
-    "    exit(1)"
+    "    sys.exit(1)"
    ]
   },
   {
@@ -1343,21 +1344,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
