Cleanups: exit() -> sys.exit(), remove unneeded imports & document more imports

--- a/Tutorial-ADM_Initial_Data-TOV.ipynb
+++ b/Tutorial-ADM_Initial_Data-TOV.ipynb
@@ -63,11 +63,10 @@
    "outputs": [],
    "source": [
     "# Step 1: Import needed Python/NRPy+ modules\n",
-    "import numpy as np\n",
-    "import scipy.integrate as si\n",
-    "import math\n",
-    "import sys\n",
-    "import TOV.Polytropic_EOSs as ppeos"
+    "import numpy as np                  # NumPy: A numerical methods module for Python\n",
+    "import scipy.integrate as si        # SciPy: Python module for mathematics, science, and engineering applications\n",
+    "import math, sys                    # Standard Python modules for math; multiplatform OS-level functions\n",
+    "import TOV.Polytropic_EOSs as ppeos # NRPy+: Piecewise polytrope equation of state support"
    ]
   },
   {
@@ -439,7 +438,7 @@
     "if filecmp.cmp('outputTOVpolytrope.txt',\n",
     "               'outputTOVpolytrope-validation.txt') == False:\n",
     "    print(\"ERROR: TOV initial data test FAILED!\")\n",
-    "    exit(1)\n",
+    "    sys.exit(1)\n",
     "else:\n",
     "    print(\"TOV initial data test PASSED.\")"
    ]
@@ -467,7 +466,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ADM_Initial_Data-TOV.ipynb to latex\n",
-      "[NbConvertApp] Writing 56381 bytes to Tutorial-ADM_Initial_Data-TOV.tex\n",
+      "[NbConvertApp] Writing 56763 bytes to Tutorial-ADM_Initial_Data-TOV.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
