--- a/Tutorial-BSSN_in_terms_of_ADM.ipynb
+++ b/Tutorial-BSSN_in_terms_of_ADM.ipynb
@@ -78,8 +78,9 @@
     "import NRPy_param_funcs as par    # NRPy+: Parameter interface\n",
     "import indexedexp as ixp          # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "import reference_metric as rfm    # NRPy+: Reference metric support\n",
-    "import BSSN.BSSN_quantities as Bq # NRPy+: Useful BSSN quantities. Needed for e.g., EvolvedConformalFactor_cf param\n",
     "import sys                        # Standard Python modules for multiplatform OS-level functions\n",
+    "import BSSN.BSSN_quantities as Bq # NRPy+: This module depends on the parameter EvolvedConformalFactor_cf,\n",
+    "                                  #        which is defined in BSSN.BSSN_quantities\n",
     "\n",
     "# Step 1.a: Set DIM=3, as we're using a 3+1 decomposition of Einstein's equations\n",
     "DIM=3"
@@ -324,7 +325,7 @@
     "        cf = (gammaDET/gammabarDET)**(-sp.Rational(1,6))\n",
     "    else:\n",
     "        print(\"Error EvolvedConformalFactor_cf type = \\\"\"+par.parval_from_str(\"EvolvedConformalFactor_cf\")+\"\\\" unknown.\")\n",
-    "        exit(1)"
+    "        sys.exit(1)"
    ]
   },
   {
@@ -491,7 +492,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-BSSN_in_terms_of_ADM.ipynb to latex\n",
-      "[NbConvertApp] Writing 60135 bytes to Tutorial-BSSN_in_terms_of_ADM.tex\n",
+      "[NbConvertApp] Writing 60771 bytes to Tutorial-BSSN_in_terms_of_ADM.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
