--- a/Tutorial-WeylScalarsInvariants-Cartesian.ipynb
+++ b/Tutorial-WeylScalarsInvariants-Cartesian.ipynb
@@ -73,12 +73,11 @@
    "outputs": [],
    "source": [
     "# Step 1: import all needed modules from NRPy+:\n",
-    "import NRPy_param_funcs as par\n",
-    "import indexedexp as ixp\n",
-    "import grid as gri\n",
-    "import finite_difference as fin\n",
-    "from outputC import *\n",
-    "import sympy as sp"
+    "import sympy as sp                # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
+    "import indexedexp as ixp          # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "import grid as gri                # NRPy+: Functions having to do with numerical grids\n",
+    "import NRPy_param_funcs as par    # NRPy+: Parameter interface\n",
+    "import sys                        # Standard Python modules for multiplatform OS-level functions"
    ]
   },
   {
@@ -318,7 +317,7 @@
     "\n",
     "else:\n",
     "    print(\"Error: TetradChoice == \"+par.parval_from_str(\"TetradChoice\")+\" unsupported!\")\n",
-    "    exit(1)"
+    "    sys.exit(1)"
    ]
   },
   {
@@ -736,7 +735,6 @@
     "print(\"Consistency check between WeylScalars_Cartesian tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
     "\n",
     "print(\"psi4r - weyl.psi4r = \" + str(psi4r - weyl.psi4r))\n",
-    "exit(1)\n",
     "print(\"psi4i - weyl.psi4i = \" + str(psi4i - weyl.psi4i))\n",
     "print(\"psi3r - weyl.psi3r = \" + str(psi3r - weyl.psi3r))\n",
     "print(\"psi3i - weyl.psi3i = \" + str(psi3i - weyl.psi3i))\n",
@@ -959,7 +957,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-WeylScalarsInvariants-Cartesian.ipynb to latex\n",
-      "[NbConvertApp] Writing 125837 bytes to Tutorial-WeylScalarsInvariants-Cartesian.tex\n",
+      "[NbConvertApp] Writing 126314 bytes to Tutorial-WeylScalarsInvariants-Cartesian.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -983,21 +981,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
