--- a/Tutorial-ADM_in_terms_of_BSSN.ipynb
+++ b/Tutorial-ADM_in_terms_of_BSSN.ipynb
@@ -79,12 +79,11 @@
    "outputs": [],
    "source": [
     "# Step 1.a: Import all needed modules from NRPy+\n",
-    "import sympy as sp\n",
-    "import NRPy_param_funcs as par\n",
-    "import indexedexp as ixp\n",
-    "import grid as gri\n",
-    "import finite_difference as fin\n",
-    "import reference_metric as rfm\n",
+    "from outputC import *             # NRPy+: Core C code output module\n",
+    "import sympy as sp                # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
+    "import indexedexp as ixp          # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "import reference_metric as rfm    # NRPy+: Reference metric support\n",
+    "import sys                        # Standard Python module for multiplatform OS-level functions\n",
     "\n",
     "# Step 1.b: Set the coordinate system for the numerical grid\n",
     "par.set_parval_from_str(\"reference_metric::CoordSystem\",\"Spherical\")\n",
@@ -187,7 +186,7 @@
     "    exp4phi    = (1 / cf**2)\n",
     "else:\n",
     "    print(\"Error EvolvedConformalFactor_cf type = \\\"\"+par.parval_from_str(\"EvolvedConformalFactor_cf\")+\"\\\" unknown.\")\n",
-    "    exit(1)            \n",
+    "    sys.exit(1)            \n",
     "\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
@@ -267,7 +266,7 @@
     "            phidDD[i][j] = sp.Rational(1,2)*( exp4phi*cf_dD[i]*cf_dD[j] - exp2phi*cf_dDD[i][j] )\n",
     "else:\n",
     "    print(\"Error EvolvedConformalFactor_cf type = \\\"\"+par.parval_from_str(\"EvolvedConformalFactor_cf\")+\"\\\" unknown.\")\n",
-    "    exit(1)\n",
+    "    sys.exit(1)\n",
     "\n",
     "exp4phidD  = ixp.zerorank1()\n",
     "exp4phidDD = ixp.zerorank2()\n",
@@ -478,7 +477,10 @@
     "    comp_func(expr_list[i],exprcheck_list[i],namecheck_list[i])\n",
     "\n",
     "if all_passed:\n",
-    "    print(\"ALL TESTS PASSED!\")"
+    "    print(\"ALL TESTS PASSED!\")\n",
+    "else:\n",
+    "    print(\"ERROR. ONE OR MORE TESTS FAILED\")\n",
+    "    sys.exit(1)"
    ]
   },
   {
@@ -506,7 +508,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ADM_in_terms_of_BSSN.ipynb to latex\n",
-      "[NbConvertApp] Writing 60742 bytes to Tutorial-ADM_in_terms_of_BSSN.tex\n",
+      "[NbConvertApp] Writing 60207 bytes to Tutorial-ADM_in_terms_of_BSSN.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -530,21 +532,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
