--- a/Tutorial-BSSN_time_evolution-BSSN_RHSs.ipynb
+++ b/Tutorial-BSSN_time_evolution-BSSN_RHSs.ipynb
@@ -140,12 +140,14 @@
    "outputs": [],
    "source": [
     "# Step 1.a: import all needed modules from Python/NRPy+:\n",
-    "import sympy as sp\n",
-    "import NRPy_param_funcs as par\n",
-    "import indexedexp as ixp\n",
-    "import grid as gri\n",
-    "import finite_difference as fin\n",
-    "import reference_metric as rfm\n",
+    "import sympy as sp                # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
+    "import NRPy_param_funcs as par    # NRPy+: Parameter interface\n",
+    "import grid as gri                # NRPy+: Functions having to do with numerical grids\n",
+    "import indexedexp as ixp          # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "import reference_metric as rfm    # NRPy+: Reference metric support\n",
+    "import sys                        # Standard Python modules for multiplatform OS-level functions\n",
+    "import BSSN.BSSN_quantities as Bq # NRPy+: This module depends on the parameter EvolvedConformalFactor_cf,\n",
+    "                                  #        which is defined in BSSN.BSSN_quantities\n",
     "\n",
     "# Step 1.b: Set the coordinate system for the numerical grid\n",
     "par.set_parval_from_str(\"reference_metric::CoordSystem\",\"Spherical\")\n",
@@ -518,7 +520,7 @@
     "else:\n",
     "    print(\"Error: EvolvedConformalFactor_cf == \"+\n",
     "          par.parval_from_str(\"BSSN.BSSN_quantities::EvolvedConformalFactor_cf\")+\" unsupported!\")\n",
-    "    exit(1) "
+    "    sys.exit(1) "
    ]
   },
   {
@@ -1023,7 +1025,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-BSSN_time_evolution-BSSN_RHSs.ipynb to latex\n",
-      "[NbConvertApp] Writing 100995 bytes to Tutorial-BSSN_time_evolution-BSSN_RHSs.tex\n",
+      "[NbConvertApp] Writing 102978 bytes to Tutorial-BSSN_time_evolution-BSSN_RHSs.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -1047,21 +1049,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
