--- a/Tutorial-Psi4_tetrads.ipynb
+++ b/Tutorial-Psi4_tetrads.ipynb
@@ -91,12 +91,11 @@
    "outputs": [],
    "source": [
     "# Step 1.a: import all needed modules from NRPy+:\n",
-    "import sympy as sp\n",
-    "import NRPy_param_funcs as par\n",
-    "import indexedexp as ixp\n",
-    "import grid as gri\n",
-    "import finite_difference as fin\n",
-    "import reference_metric as rfm\n",
+    "import sympy as sp                # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
+    "import NRPy_param_funcs as par    # NRPy+: Parameter interface\n",
+    "import indexedexp as ixp          # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "import reference_metric as rfm    # NRPy+: Reference metric support\n",
+    "import sys                        # Standard Python modules for multiplatform OS-level functions\n",
     "\n",
     "# Step 1.b: Set the coordinate system for the numerical grid\n",
     "par.set_parval_from_str(\"reference_metric::CoordSystem\",\"Spherical\")\n",
@@ -281,7 +280,7 @@
     "        return v3U[a]\n",
     "    else:\n",
     "        print(\"ERROR: unknown vector!\")\n",
-    "        exit(1)\n",
+    "        sys.exit(1)\n",
     "\n",
     "def update_omega(omegaDD, i,j, v1U,v2U,v3U,gammaDD):\n",
     "    omegaDD[i][j] = sp.sympify(0)\n",
@@ -463,7 +462,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-Psi4_tetrads.ipynb to latex\n",
-      "[NbConvertApp] Writing 57168 bytes to Tutorial-Psi4_tetrads.tex\n",
+      "[NbConvertApp] Writing 55408 bytes to Tutorial-Psi4_tetrads.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -487,21 +486,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
