--- a/Tutorial-SpinWeighted_Spherical_Harmonics.ipynb
+++ b/Tutorial-SpinWeighted_Spherical_Harmonics.ipynb
@@ -68,10 +68,9 @@
    "outputs": [],
    "source": [
     "# Step 1: Initialize needed Python/NRPy+ modules \n",
-    "\n",
-    "import sympy as sp\n",
-    "import NRPy_param_funcs as par\n",
-    "from outputC import *\n",
+    "from outputC import *             # NRPy+: Core C code output module\n",
+    "import sympy as sp                # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
+    "import sys                        # Standard Python modules for multiplatform OS-level functions\n",
     "\n",
     "# Step 1.a: Set maximum l to which we will validate the spin-weighted spherical harmonics with s=-2:\n",
     "maximum_l = 4 # Note that we have validated against Mathematica up to and including l=8 -- perfect agreement."
@@ -241,7 +240,7 @@
     "fileprefix = \"SpinWeight_minus2_SphHarmonics/SpinWeight_minus2_SphHarmonics\"\n",
     "if filecmp.cmp(fileprefix+\"-NRPymodule.h\",fileprefix+\".h\") == False:\n",
     "    print(\"VALIDATION TEST FAILED ON file: \"+fileprefix+\".h\"+\".\")\n",
-    "    exit(1)\n",
+    "    sys.exit(1)\n",
     "else:\n",
     "    print(\"VALIDATION TEST PASSED on file: \"+fileprefix+\".h\")"
    ]
@@ -269,7 +268,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-SpinWeighted_Spherical_Harmonics.ipynb to latex\n",
-      "[NbConvertApp] Writing 37135 bytes to Tutorial-SpinWeighted_Spherical_Harmonics.tex\n",
+      "[NbConvertApp] Writing 42681 bytes to Tutorial-SpinWeighted_Spherical_Harmonics.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -293,21 +292,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
